force-app/main/default/objects/Opportunity/fields/AddressApprover__c.field-meta.xml
<CustomField>
    <fullName>AddressApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>