force-app/main/default/objects/Opportunity/fields/AddressVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressVerificationStatus__c</fullName>
    <label>Address Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
                <default>true</default>
                <label>Not Verified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>