force-app/main/default/objects/Opportunity/fields/PromoCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCode__c</fullName>
    <label>Promo Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>